[package]
name = "wookoong"
version = "0.1.0"
authors = ["BearMaster <bearmaster@qq.com>"]
edition = "2018"



[lib]
name="monkey_lib"
path="lib/monkey.rs"

[[bin]]
name = "monkey_repl"
path = "repl/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
rustyline = "6.2.0"
escape8259 = "0.5.0"
